Fixed line spacing

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,7 @@
 h1, h2, h3 {
     color: #4CAF50;
     text-align: center;
-    line-height:0%;
+    line-height:normal;
 }
 
 
